# Predictive_Maintenance

./: .gitignore  Dockerfile  README.md  Steps.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
research/: 001_ingesta_local.py
src/: main.py
src/analysis/: reliability_metrics copy.py  reliability_metrics.py
src/core/: config.py  init_db.py
src/dashboard/: app.py  callbacks.py  layout.py
src/database/: base.py  session.py
src/models/: __init__.py  error.py  failure.py  machine.py  maintenance.py  telemetry.py
src/services/: ai_analyst.py  ingestion.py
